envs/bert_data/v2/appworld/router_stats.md
# 路由统计表 — appworld(参数头裁决书)

| 工具 | 事件数 | 参数数中位 | 逐字命中率 | 参数长中位 |
|---|---|---|---|---|
| apis.api_docs.show_api_doc | 668 | 2 | 0.99 | 9 |
| apis.api_docs.show_api_descriptions | 415 | 1 | 0.99 | 7 |
| apis.supervisor.show_profile | 226 | 0 | - | - |
| apis.api_docs.show_app_descriptions | 184 | 0 | - | - |
| apis.venmo.show_transactions | 141 | 5 | 0.98 | 8 |
| apis.supervisor.complete_task | 106 | 0 | 0.62 | 6 |
| apis.supervisor.show_account_passwords | 104 | 0 | - | - |
| apis.spotify.login | 93 | 2 | 0.99 | 10 |
| apis.phone.login | 58 | 2 | 0.97 | 10 |
| apis.phone.search_contacts | 54 | 2 | 0.97 | 8 |
| apis.venmo.login | 52 | 2 | 0.99 | 13 |
| apis.file_system.show_directory | 51 | 2 | 0.96 | 5 |
| apis.spotify.show_song | 44 | 2 | 0.96 | 5 |
| apis.phone.send_text_message | 32 | 3 | 1.00 | 10 |
| apis.spotify.show_song_library | 31 | 1 | 1.00 | 5 |
| apis.venmo.search_users | 30 | 2 | 0.84 | 13 |
| apis.file_system.login | 26 | 2 | 0.96 | 8 |
| apis.venmo.create_transaction | 25 | 4 | 0.96 | 5 |
| apis.phone.show_contact_relationships | 22 | 1 | 0.71 | 11 |
| apis.spotify.show_album_library | 22 | 1 | 1.00 | 5 |
| apis.spotify.show_liked_songs | 20 | 3 | 0.98 | 5 |
| apis.spotify.search_songs | 18 | 2 | 0.98 | 3 |
| apis.file_system.create_directory | 17 | 3 | 0.87 | 8 |
| apis.spotify.search_artists | 17 | 2 | 0.91 | 5 |
| apis.spotify.show_playlist_library | 16 | 1 | 1.00 | 5 |
| apis.simple_note.search_notes | 16 | 2 | 0.97 | 3 |
| apis.file_system.show_file | 14 | 2 | 0.79 | 10 |
| apis.spotify.show_account | 13 | 1 | 1.00 | 5 |
| apis.venmo.like_transaction | 13 | 2 | 0.88 | 5 |
| apis.phone.get_current_date_and_time | 12 | 0 | 1.00 | 11 |
| apis.venmo.show_received_payment_requests | 12 | 3 | 1.00 | 5 |
| apis.simple_note.show_note | 12 | 2 | 0.88 | 13 |
| apis.spotify.show_liked_albums | 9 | 1 | 1.00 | 5 |
| apis.spotify.show_artist | 9 | 1 | 1.00 | 2 |
| apis.spotify.show_profile | 9 | 1 | 1.00 | 19 |
| apis.simple_note.login | 8 | 2 | 1.00 | 13 |
| apis.spotify.show_current_song | 8 | 1 | 1.00 | 5 |
| apis.venmo.show_payment_cards | 7 | 1 | 1.00 | 11 |
| apis.spotify.show_artist_following | 7 | 2 | 1.00 | 7 |
| apis.venmo.show_transaction | 7 | 2 | 1.00 | 4 |
| apis.venmo.add_to_venmo_balance | 7 | 3 | 1.00 | 3 |
| apis.spotify.download_song | 7 | 2 | 1.00 | 5 |
| apis.file_system.create_file | 7 | 3 | 0.62 | 58 |
| apis.file_system.directory_exists | 7 | 2 | 1.00 | 12 |
| apis.venmo.show_social_feed | 7 | 3 | 1.00 | 2 |
| apis.venmo.show_sent_payment_requests | 7 | 4 | 1.00 | 5 |
| apis.venmo.show_venmo_balance | 6 | 1 | 1.00 | 11 |
| apis.spotify.show_song_privates | 6 | 2 | 1.00 | 5 |
| apis.spotify.like_song | 6 | 2 | 0.83 | 6 |
| apis.spotify.create_playlist | 6 | 2 | 0.80 | 5 |
| apis.spotify.show_playlist | 6 | 2 | 1.00 | 4 |
| apis.spotify.previous_song | 6 | 1 | 1.00 | 5 |
| apis.spotify.follow_artist | 6 | 2 | 1.00 | 7 |
| apis.phone.search_text_messages | 5 | 2 | 0.92 | 7 |
| apis.spotify.add_song_to_playlist | 5 | 3 | 1.00 | 7 |
| apis.phone.show_contacts | 4 | 0 | - | - |
| apis.venmo.show_profile | 4 | 2 | 1.00 | 24 |
| apis.spotify.add_to_queue | 4 | 2 | 1.00 | 4 |
| apis.spotify.show_downloaded_songs | 4 | 1 | 1.00 | 5 |
| apis.file_system.move_file | 4 | 3 | 0.71 | 5 |
| apis.spotify.show_liked_playlists | 3 | 1 | 1.00 | 5 |
| apis.phone.show_account | 3 | 0 | 1.00 | 11 |
| apis.supervisor.show_payment_cards | 2 | 0 | - | - |
| apis.venmo.show_account | 2 | 1 | 1.00 | 77 |
| apis.spotify.search_albums | 2 | 2 | 1.00 | 9 |
| apis.phone.show_text_message_window | 2 | 2 | 1.00 | 7 |
| apis.spotify.show_song_queue | 2 | 1 | 1.00 | 5 |
| apis.venmo.search_friends | 2 | 2 | 1.00 | 3 |
| apis.venmo.remind_payment_request | 2 | 2 | 1.00 | 4 |
| apis.phone.list_contacts | 1 | 0 | - | - |
| apis.venmo.add_payment_card | 1 | 7 | 0.43 | 32 |
| apis.spotify.show_user_recently_played | 1 | 1 | 0.00 | 4 |
| apis.supervisor.show_active_task | 1 | 0 | - | - |
| apis.spotify.show_premium_subscriptions | 1 | 1 | 1.00 | 5 |
| apis.spotify.show_playlist_privates | 1 | 2 | 1.00 | 79 |
| apis.venmo.show_feed | 1 | 1 | 1.00 | 21 |
| apis.spotify.show_following_artists | 1 | 2 | 1.00 | 3 |
| apis.spotify.next_song | 1 | 1 | 1.00 | 5 |
| apis.phone.get_contacts | 1 | 0 | - | - |
