envs/bert_data/v3/appworld/router_stats.md
# 路由统计表 — appworld(参数头裁决书)

| 工具 | 事件数 | 参数数中位 | 逐字命中率 | 参数长中位 |
|---|---|---|---|---|
| apis.api_docs.show_api_doc | 1457 | 2 | 0.99 | 9 |
| apis.api_docs.show_api_descriptions | 820 | 1 | 0.99 | 7 |
| apis.supervisor.show_profile | 478 | 0 | - | - |
| apis.api_docs.show_app_descriptions | 409 | 0 | - | - |
| apis.supervisor.show_account_passwords | 211 | 0 | - | - |
| apis.supervisor.complete_task | 193 | 0 | 0.70 | 10 |
| apis.venmo.show_transactions | 192 | 5 | 0.96 | 8 |
| apis.spotify.login | 176 | 2 | 0.98 | 8 |
| apis.phone.login | 109 | 2 | 0.98 | 10 |
| apis.file_system.show_directory | 106 | 2 | 0.95 | 6 |
| apis.spotify.show_song | 93 | 2 | 0.92 | 5 |
| apis.venmo.login | 80 | 2 | 0.97 | 13 |
| apis.phone.search_contacts | 79 | 2 | 0.94 | 8 |
| apis.file_system.login | 61 | 2 | 0.96 | 8 |
| apis.spotify.show_song_library | 59 | 1 | 1.00 | 5 |
| apis.venmo.search_users | 48 | 2 | 0.90 | 11 |
| apis.simple_note.search_notes | 42 | 2 | 0.80 | 7 |
| apis.file_system.show_file | 40 | 2 | 0.93 | 8 |
| apis.spotify.show_playlist_library | 40 | 1 | 1.00 | 5 |
| apis.simple_note.login | 37 | 2 | 1.00 | 11 |
| apis.phone.send_text_message | 36 | 3 | 0.98 | 10 |
| apis.spotify.search_songs | 36 | 3 | 0.95 | 5 |
| apis.phone.show_contact_relationships | 33 | 1 | 0.73 | 11 |
| apis.spotify.show_album_library | 33 | 1 | 1.00 | 5 |
| apis.spotify.show_liked_songs | 32 | 3 | 0.99 | 5 |
| apis.venmo.create_transaction | 30 | 4 | 0.95 | 5 |
| apis.simple_note.show_note | 29 | 2 | 0.95 | 5 |
| apis.spotify.search_artists | 28 | 2 | 0.94 | 5 |
| apis.spotify.search_playlists | 26 | 2 | 0.97 | 7 |
| apis.file_system.create_directory | 25 | 3 | 0.86 | 8 |
| apis.venmo.show_received_payment_requests | 24 | 3 | 0.99 | 5 |
| apis.phone.search_text_messages | 21 | 2 | 0.98 | 5 |
| apis.phone.get_current_date_and_time | 20 | 1 | 1.00 | 11 |
| apis.venmo.like_transaction | 15 | 2 | 0.90 | 5 |
| apis.spotify.follow_artist | 14 | 2 | 0.96 | 5 |
| apis.spotify.show_artist_following | 13 | 2 | 1.00 | 5 |
| apis.spotify.show_song_privates | 13 | 2 | 0.85 | 5 |
| apis.spotify.show_account | 13 | 1 | 1.00 | 5 |
| apis.spotify.show_playlist | 13 | 2 | 0.96 | 5 |
| apis.spotify.show_artist | 12 | 2 | 1.00 | 2 |
| apis.phone.update_alarm | 12 | 3 | 0.92 | 5 |
| apis.spotify.show_recommendations | 11 | 2 | 1.00 | 3 |
| apis.venmo.create_payment_request | 11 | 4 | 0.95 | 14 |
| apis.spotify.show_liked_albums | 10 | 2 | 1.00 | 5 |
| apis.file_system.create_file | 10 | 3 | 0.76 | 29 |
| apis.file_system.move_file | 10 | 3 | 0.72 | 5 |
| apis.spotify.show_profile | 9 | 1 | 1.00 | 19 |
| apis.spotify.like_song | 9 | 2 | 0.89 | 7 |
| apis.spotify.create_playlist | 9 | 2 | 0.86 | 5 |
| apis.venmo.show_social_feed | 9 | 3 | 1.00 | 2 |
| apis.file_system.compress_directory | 9 | 5 | 0.64 | 5 |
| apis.venmo.show_transaction | 8 | 2 | 1.00 | 4 |
| apis.venmo.show_venmo_balance | 8 | 1 | 1.00 | 11 |
| apis.spotify.add_song_to_playlist | 8 | 3 | 0.96 | 5 |
| apis.spotify.show_current_song | 8 | 1 | 1.00 | 5 |
| apis.venmo.show_sent_payment_requests | 8 | 3 | 1.00 | 5 |
| apis.gmail.show_inbox_threads | 8 | 2 | 0.88 | 11 |
| apis.spotify.remove_song_from_library | 8 | 2 | 1.00 | 5 |
| apis.venmo.show_payment_cards | 7 | 1 | 1.00 | 11 |
| apis.venmo.add_to_venmo_balance | 7 | 3 | 1.00 | 3 |
| apis.spotify.download_song | 7 | 2 | 1.00 | 5 |
| apis.file_system.directory_exists | 7 | 2 | 1.00 | 12 |
| apis.phone.show_alarms | 7 | 2 | 1.00 | 5 |
| apis.spotify.show_genres | 7 | 1 | 1.00 | 5 |
| apis.phone.show_contacts | 6 | 0 | - | - |
| apis.spotify.search_albums | 6 | 2 | 1.00 | 12 |
| apis.spotify.previous_song | 6 | 1 | 1.00 | 5 |
| apis.venmo.search_friends | 6 | 2 | 0.91 | 5 |
| apis.venmo.show_profile | 5 | 2 | 0.89 | 21 |
| apis.spotify.show_liked_playlists | 5 | 1 | 1.00 | 13 |
| apis.spotify.show_song_queue | 5 | 1 | 0.80 | 5 |
| apis.venmo.approve_payment_request | 5 | 2 | 0.80 | 5 |
| apis.phone.search_voice_messages | 5 | 3 | 1.00 | 5 |
| apis.phone.delete_voice_message | 5 | 2 | 1.00 | 5 |
| apis.spotify.add_to_queue | 4 | 2 | 1.00 | 4 |
| apis.spotify.show_downloaded_songs | 4 | 1 | 1.00 | 5 |
| apis.spotify.show_following_artists | 4 | 2 | 1.00 | 5 |
| apis.simple_note.update_note | 4 | 3 | 0.92 | 6 |
| apis.spotify.show_song_reviews | 4 | 2 | 1.00 | 8 |
| apis.venmo.create_transaction_comment | 4 | 3 | 0.75 | 5 |
| apis.phone.show_account | 3 | 0 | 1.00 | 11 |
| apis.gmail.login | 3 | 2 | 1.00 | 12 |
| apis.spotify.send_verification_code | 3 | 1 | 1.00 | 17 |
| apis.spotify.show_album_privates | 3 | 2 | 0.67 | 5 |
| apis.spotify.remove_album_from_library | 3 | 2 | 1.00 | 5 |
| apis.spotify.delete_account | 3 | 1 | 1.00 | 5 |
| apis.spotify.show_album | 3 | 2 | 0.80 | 5 |
| apis.spotify.review_song | 3 | 3 | 1.00 | 5 |
| apis.venmo.deny_payment_request | 3 | 2 | 0.83 | 8 |
| apis.phone.delete_text_message | 3 | 2 | 0.50 | 5 |
| apis.phone.list_contacts | 2 | 0 | - | - |
| apis.supervisor.show_active_task | 2 | 0 | - | - |
| apis.supervisor.show_payment_cards | 2 | 0 | - | - |
| apis.venmo.show_account | 2 | 1 | 1.00 | 77 |
| apis.phone.show_text_message_window | 2 | 2 | 1.00 | 7 |
| apis.venmo.remind_payment_request | 2 | 2 | 1.00 | 4 |
| apis.file_system.show_account | 2 | 1 | 1.00 | 75 |
| apis.spotify.play_music | 2 | 2 | 1.00 | 4 |
| apis.splitwise.login | 2 | 2 | 1.00 | 13 |
| apis.spotify.update_song_review | 2 | 3 | 1.00 | 4 |
| apis.spotify.remove_song_from_playlist | 2 | 3 | 0.83 | 5 |
| apis.venmo.add_payment_card | 1 | 7 | 0.43 | 32 |
| apis.spotify.show_user_recently_played | 1 | 1 | 0.00 | 4 |
| apis.spotify.show_premium_subscriptions | 1 | 1 | 1.00 | 5 |
| apis.spotify.show_playlist_privates | 1 | 2 | 1.00 | 79 |
| apis.venmo.show_feed | 1 | 1 | 1.00 | 21 |
| apis.spotify.next_song | 1 | 1 | 1.00 | 5 |
| apis.phone.get_contacts | 1 | 0 | - | - |
| apis.venmo.send_password_reset_code | 1 | 1 | 1.00 | 16 |
| apis.spotify.play_track | 1 | 2 | 1.00 | 4 |
| apis.spotify.play_song | 1 | 2 | 1.00 | 4 |
| apis.spotify.send_password_reset_code | 1 | 1 | 1.00 | 17 |
| apis.spotify.signup | 1 | 4 | 1.00 | 7 |
| apis.gmail.signup | 1 | 4 | 1.00 | 7 |
| apis.gmail.show_spam_threads | 1 | 2 | 0.50 | 28 |
| apis.file_system.list_files | 1 | 1 | 1.00 | 1 |
| apis.spotify.show_song_review | 1 | 2 | 1.00 | 3 |
| apis.gmail.show_archived_threads | 1 | 2 | 1.00 | 13 |
| apis.splitwise.show_activity | 1 | 1 | 1.00 | 15 |
| apis.spotify.unfollow_artist | 1 | 2 | 1.00 | 7 |
